# Resourse-Qoute

./: README.md  pyproject.toml
notes/noteapp/: forms.py  models.py  urls.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_author_user_quote_user_tag_user_tag_tag of username.py  0004_auto_20230203_2139.py  0005_auto_20230203_2153.py  0006_auto_20230203_2157.py  0007_auto_20230203_2211.py  0008_alter_tag_name.py  0009_auto_20230203_2226.py  0010_auto_20230203_2245.py
notes/noteapp/templates/noteapp/: add_author.html  add_quote.html  author.html  base.html  index.html  quote.html  tag.html
notes/notes/: settings.py  urls.py
notes/users/: forms.py  urls.py  views.py
notes/users/templates/users/: login.html  logout.html  register.html
