[tool.poetry]
name = "modul-10"
version = "0.1.0"
description = ""
authors = ["Invil124 <113246425+Invil124@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "modul_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2 = "^2.9.5"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
